--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -11,9 +11,12 @@ name: Ruby
 
 on:
   push:
-    branches: [master]
+    branches: ["master", "ruby-v3x"]
   pull_request:
-    branches: [master]
+    branches: ["master", "ruby-v3x"]
+
+permissions:
+  contents: read
 
 jobs:
   lint_and_test:
@@ -21,19 +24,20 @@ jobs:
       RACK_ENV: test
       COVERAGE: "true"
     strategy:
-      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby: ["3.0", "3.1", "3.2", "3.3", "jruby-9.4"]
+        ruby-version: ["3.0", "3.1", "3.2", "3.3", "jruby-9.4"]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 3
 
     steps:
       - uses: actions/checkout@v4
       - name: Set up Ruby
+        # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
+        # change this to (see https://github.com/ruby/setup-ruby#versioning):
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Run rake (lint and test)
         run: bundle exec rake
