--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -26,7 +26,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby-version: ["3.0", "3.1", "3.2", "3.3", "jruby-9.4"]
+        ruby-version: ["3.0", "3.1", "3.2", "3.3"]
+        # Disable JRuby for now
+        # ruby-version: ["3.0", "3.1", "3.2", "3.3", "jruby-9.4"]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 3
 
