--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,6 @@
 inherit_from: .rubocop_todo.yml
 
-require:
+plugins:
   - rubocop-minitest
   - rubocop-performance
   - rubocop-rake
@@ -21,8 +21,10 @@ AllCops:
   NewCops: enable
 
 Layout/LineLength:
+  Enabled: true
+  Max: 100
   Exclude:
-    - "minitest-have_tag.gemspec"
+    - "**/*.gemspec"
 
 Metrics/BlockLength:
   Enabled: true
@@ -38,3 +40,13 @@ Style/Documentation:
   Exclude:
     - "spec/**/*"
     - "test/**/*"
+
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
+
+Style/StringLiteralsInInterpolation:
+  EnforcedStyle: double_quotes
+
+Naming/PredicateName:
+  Exclude:
+    - "lib/minitest/have_tag.rb"
