--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -11,9 +11,13 @@ name: Ruby
 
 on:
   push:
-    branches: ["master", "ruby-v3x"]
+    branches:
+      - main
+      - dev
   pull_request:
-    branches: ["master", "ruby-v3x"]
+    branches:
+      - main
+      - dev
 
 permissions:
   contents: read
@@ -26,7 +30,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby-version: ["3.0", "3.1", "3.2", "3.3"]
+        ruby-version: ["3.0", "3.1", "3.2", "3.3", "3.4"]
         # Disable JRuby for now
         # ruby-version: ["3.0", "3.1", "3.2", "3.3", "jruby-9.4"]
     runs-on: ${{ matrix.os }}
