FIX: workflow branch

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,10 +12,12 @@ name: Ruby
 on:
   push:
     branches:
+      - master
       - main
       - dev
   pull_request:
     branches:
+      - master
       - main
       - dev
 
